--- a/sharp1/index.html
+++ b/sharp1/index.html
@@ -15,6 +15,9 @@
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
     <br>
+    <label for="Phone Number">Ph No:</label>
+    <input type ="tel" id="phone" name="phone" required>
+    <br>
     <input type="submit" value="Submit">
   </form>
 
