--- a/axios/index.html
+++ b/axios/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <title>Axios Crash Course</title>
+    <title>Axios</title>
   </head>
   <body>
     <div class="container my-5">
@@ -30,7 +30,7 @@
         <button class="btn btn-secondary" id="error">
           Error Handling
         </button>
-        <button class="btn btn-secondary" id="cancel">
+        <button class="btn btn-secondarys" id="cancel">
           Cancel
         </button>
       </div>
