--- a/sharp1/index.html
+++ b/sharp1/index.html
@@ -21,6 +21,7 @@
     <input type="submit" value="Submit">
   </form>
 
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="main.js"></script>
 
 </body>
