--- a/EcomBack/index.html
+++ b/EcomBack/index.html
@@ -28,6 +28,7 @@
 <h2>Products</h2>
 <div id="output"></div>
 
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
