updated html with good title

--- a/Appointments/index.html
+++ b/Appointments/index.html
@@ -6,7 +6,7 @@
   <title>User Details Form</title>
 </head>
 <body>
-    <h1>Enter Details</h1>
+    <h1>Enter Your Details to Book Appointment </h1>
 
   <form id="userForm">
     <label for="name">Name:</label>
