--- a/Appointments/index.html
+++ b/Appointments/index.html
@@ -4,25 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Details Form</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Enter Your Details to Book Appointment </h1>
+  <div class="container">
+    <h1>Enter Your Details to Book Appointment</h1>
+    
+    <form id="userForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+      <br>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+      <br>
+      <label for="Phone Number">Ph No:</label>
+      <input type="tel" id="phone" name="phone" required>
+      <br>
+      <input type="submit" value="Submit">
+    </form>
 
-  <form id="userForm">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br>
-    <label for="Phone Number">Ph No:</label>
-    <input type ="tel" id="phone" name="phone" required>
-    <br>
-    <input type="submit" value="Submit">
-  </form>
+    <div id="userDetails"></div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="main.js"></script>
-
 </body>
 </html>
