--- a/Appointments/public/index.html
+++ b/Appointments/public/index.html
@@ -4,29 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Details Form</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <div class="container">
     <h1>Enter Your Details to Book Appointment</h1>
     
-    <form id="userForm">
+    <form id="userForm" method="POST" action="/api/appointments">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
       <br>
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
       <br>
-      <label for="Phone Number">Ph No:</label>
+      <label for="phone">Phone Number:</label>
       <input type="tel" id="phone" name="phone" required>
       <br>
       <input type="submit" value="Submit">
     </form>
+    
 
     <div id="userDetails"></div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="main.js"></script>
 </body>
 </html>
