--- a/Appointments/public/success.html
+++ b/Appointments/public/success.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Appointment Created Successfully!</h1>
+    <h1>Appointment Booked Successfully!</h1>
     <p>Thank you For Booking Appointment</p>
     <a href="/" class="button">Back to Main Page</a>
   </div>
